# OCR_Quality_Audit

./: .gitignore  Analyse des résultats.py  CHANGELOG_PHASE2.md  CHANGELOG_TIMING.md  FUTURE_MULTIPROCESSING_SOLUTIONS.md  INSTALLATION_UBUNTU.md  MODIFICATIONS_CUDA.md  OPENCV_CUDA_SETUP.md  PHASE2_OPTIMISATIONS_GPU.md  PHASE3_OPENCV_CUDA_UBUNTU.md  PIPELINE_TRAITEMENT_IMAGES.md  README.md  RECOMMANDATIONS_PERFORMANCES.md  SOLUTION_BLUR_CLAHE.md  THREADING_IMPLEMENTED.md  USAGE_PACKAGE.md  analyze_screening.py  build_opencv_cuda.sh  gemini.md  generate_callgraph.py  gui_main.py  gui_main_chat.py  gui_optimizer_v3_ultim.py  gui_optimizer_v3_ultim_V2.py  gui_optimizer_v3_ultim_v3.py  optimizer.py  optimizer_chat.py  pip-constraints.txt  pipeline.py  pipeline_chat.py  pyproject.toml  requirements.txt  requirements_analysis.txt  requirements_ubuntu.txt  resultats_metrics_NSGA-II (Génétique)_20251125_181841.csv~  scipy_optimizer.py  screening_sobol_4096pts_20251204_214825.csv.py  temps execution portable n=5.txt  test_cuda.py  test_cuda_performance.py  (+6 more)
.claude/: settings.local.json
Old__Premiers essais__ne pas utiliser/: audit_images.py  gui_optimizer.py  gui_optimizer_V2.py  gui_optimizer_V3.py  optimizer_ocr.py  pipeline_correction_finale.py  test_isolation_manuscrit.py
Phase3_Migration_Ubuntu_CUDA/: PHASE3B_PADDLEOCR.md  PHASE3_OPENCV_CUDA_UBUNTU.md  README.md  SYNTHESE_PROJET.md  build_opencv_cuda.sh  compile_opencv_numpy126.sh
docs/: DOCUMENTATION_INDEX.md
md/: MULTIPROCESSING_FINAL.md  PERFORMANCE_OPTIMIZATION.md
tests/: gui_optimizer_v3_ultim_backup.py  test_blur_clahe_timing.py  test_corrections.py  test_memory_leak.py  test_multiprocessing.py  test_multiprocessing_blur.py  test_multiprocessing_ocr.py  test_opencv_cuda.py  test_screening_threading.py  test_sequential_blur.py  test_sobol_exponent.py  (+3 more)
(+32 files in other folders)
