[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocr_quality_audit"
version = "0.1.0"
description = "Outils d'optimisation et de traitement d'images pour l'audit qualité OCR avec support CUDA"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "JM Schneider", email = "user@example.com"}
]
keywords = ["ocr", "image-processing", "optimization", "tesseract", "cuda", "opencv"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Image Processing",
]

# Dépendances principales
dependencies = [
    "numpy>=1.26.4",
    "pytesseract>=0.3.13",
    "pillow>=12.0.0",
    "optuna>=4.6.0",
    "scipy>=1.11.3",
    "pandas>=2.1.1",
    "matplotlib>=3.8.0",
    "seaborn>=0.12.0",
    "tifffile>=2023.7.0",
]

# Dépendances optionnelles par plateforme
[project.optional-dependencies]
# Pour Windows (opencv-python standard)
windows = [
    "opencv-python>=4.8.0",
]
# Pour développement (includes all tools)
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[tool.setuptools]
# Important: utiliser src layout (recommandé pour les packages modernes)
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ocr_quality_audit*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
ocr_quality_audit = ["*.txt", "*.md"]
